Falta el profile de teams y circuits

--- a/src/ToDo.txt
+++ b/src/ToDo.txt
@@ -1,7 +1,8 @@
-Usar la api de banderas
-Usar la api de twitter
-
 Al hacer click en un piloto o equipo se va a una página con toda la información del piloto o equipo, implementar las rutas /drivers/:driverId y /teams/:teamsId
 
 
-En current tanto driver como teams los primeros 3 están con otro diseño. Pilotos están como en el podio y en teams un diseño puro minimalista
+En calendar las carreras anteriores tienen un botón para ver la carrera en 2D
+
+https://github.com/yannickgloster/f1-lap-visualizer/blob/main/pages/index.js
+
+En History poner un buscador para visualizar la carrera 2D o directamente ver la tabla del campeonato
